--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Hazelnut
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   A programming language I'm working on.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/hazelnut/" # the subpath of your site, e.g. /blog/
 github: "https://github.com/Charlesetc/hazelnut"
 
 # Build settings
