Fixed variadic functions

--- a/rakefile
+++ b/rakefile
@@ -20,4 +20,5 @@ desc "Run the examples"
 task :examples do
   sh "./hazelnut run examples/basic.hzl"
   sh "./hazelnut run examples/higher_order.hzl"
+  sh "./hazelnut run examples/splat.hzl"
 end
