--- a/rakefile
+++ b/rakefile
@@ -21,4 +21,5 @@ task :examples do
   sh "./hazelnut run examples/basic.hzl"
   sh "./hazelnut run examples/higher_order.hzl"
   sh "./hazelnut run examples/splat.hzl"
+  sh "./hazelnut run examples/globals.hzl"
 end
